--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,11 +1,13 @@
 /*Grid home*/
-.pagina-completa{
-    display:grid;
+/* */
+.pagina-completa {
+    display: grid;
     grid-template-areas:
-    "header"
-    "main"
-    "footer";
-} 
+        "header"
+        "main"
+        "footer";
+overflow: hidden;
+}
 
 header {
 
@@ -37,7 +39,7 @@ footer{
     }
     .Churros-rosario{
         @extend .boton;
-        font-size: 1.5em;
+        font-size: $tamanofuente;
         color:#522903;
         margin: 20px 40px;  
         }
@@ -54,8 +56,9 @@ footer{
     .parrafo, .parrafo1, .parrafo2,.parrafo3{
         @extend .boton;
         margin: 20px 10px;  
-        font-size: 1.5em;
+        font-size: $tamanofuente;
         }
+     
     .video{
             display: none;
         }
@@ -67,7 +70,7 @@ footer{
     .parrafo3 img, .parrafo1 img{
            @include image(80px, 5px)
         }
- /*-------------------------------main mobile pagina MENU--------------*/
+
 
 .churros-rellenos img, .churros-comunes img, .delgados img, .bañados img, .delgados-bañados img, .picachurros img{  
      max-width: 50px;
@@ -76,7 +79,7 @@ footer{
 
 .rellenos, .comunes, .churritos, .churros-bañados, .churritos-bañados, .pica{
     font-family: 'Kanit', sans-serif;
-    font-size: 1.5em;
+    font-size: $tamanofuente*2;
     font-weight: bolder;
     color:$color-gradiente;
 } 
@@ -112,11 +115,12 @@ footer{
 .producto6{
     grid-area: producto6;
 }
+/* */
 .titulo{
     font-family: 'Kanit', sans-serif;
     color: #C89265; 
     text-align: center;
-    font-size: 2em;
+    font-size: $tamanofuente + 0.5;
   }
   header{
     grid-area:header;
@@ -125,7 +129,7 @@ footer{
     list-style: none;
     }
 
-/*---------------------------header-MOBILE- MENU........................*/
+/*---------------------------header- MENU........................*/
 .pagina-menu{
 display: grid;
 grid-template-areas: 
@@ -146,7 +150,7 @@ grid-area: redessociales;
 
 
 
-/*------------------------- header-MOBILE-PEDIDOS -----------------*/
+/*------------------------- header-PEDIDOS -----------------*/
 
 .pagina-pedidos{
 display: grid;
@@ -171,20 +175,21 @@ grid-area: redessociales;
 
 
 
-    /*..............................footer mobile...pagina inicial................*/
+    /*..............................footer...pagina inicial................*/
 
 .redes{ 
 font-family: 'Kanit', sans-serif;
-font-size: 1.5em;
+font-size: $tamanofuente;
 font-weight: bolder;
 color:$color-gradiente; 
 margin: 20px 40px;  
 text-align: start; 
 
 }
+
 .texto-footer-somos{
 @extend .boton;
-font-size: 1em;
+font-size: $tamanofuente - 0.5;
 color:$color-gradiente; 
 margin: 20px 10px;  
    
