--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -105,7 +105,7 @@
     }
   
     .Churros-rosario{
-        font-size: 2.5em;
+        font-size: $tamanofuente +1;
     }
 
         /* */
@@ -125,7 +125,7 @@
 
     .rellenos, .comunes, .churritos, .churros-bañados, .churritos-bañados, .pica{
     font-family: 'Kanit', sans-serif;
-    font-size: 1.5em;
+    font-size: $tamanofuente;
     font-weight: bolder;
     color:$color-gradiente;
     } 
@@ -173,7 +173,7 @@
         font-family: 'Kanit', sans-serif;
         color: $color-tittle;
         justify-items: center;
-        font-size: 2em;
+        font-size: $tamanofuente 0.5;
     }
     
 
