--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -7,7 +7,8 @@
         grid-template-areas:
         "header"
         "main"
-        "footer"
+        "footer";
+        overflow: hidden;
     } 
     footer{
         grid-area: footer;
