--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -2,7 +2,7 @@
     @media screen and (min-width:768px){
 
         .pagina-completa{
-            overflow: hidden;
+            overflow-x: hidden;
         display: grid;
         grid-template-areas:
         "header"
