--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 /*Grid home*/
-/* */
 .pagina-completa {
   display: grid;
   grid-template-areas: "header" "main" "footer"; }
@@ -167,7 +166,7 @@ footer {
 /*-----------------------media queries................desktop- PAGINA INICIAL*/
 @media screen and (min-width: 768px) {
   .pagina-completa {
-    overflow-x: hidden;
+    overflow: auto;
     display: grid;
     grid-template-areas: "header" "main" "footer"; }
   footer {
@@ -190,7 +189,6 @@ footer {
   .redessociales {
     grid-area: redessociales; }
   /*................................................HEADER PAGINA Menu..........................................*/
-  /* */
   .navbar-brand {
     width: 800px; }
   /*-----------------------pagina pedidos--------------------------------*/
@@ -213,7 +211,6 @@ footer {
   .logo {
     animation-name: animacion-in;
     animation-duration: 2s; }
-  /* */
   .video {
     animation-name: animacion-out;
     animation-duration: 5s; }
@@ -229,7 +226,6 @@ footer {
       opacity: 1; } }
   .Churros-rosario {
     font-size: 2.5em; }
-  /* */
   .video {
     text-align: center; }
   .parrafo img, .parrafo1 img {
@@ -263,7 +259,6 @@ footer {
   .parrafo2 {
     align-content: center; }
   /*..................................................TITULOS  PAGINAS.................................*/
-  /* */
   .titulo {
     font-family: 'Kanit', sans-serif;
     color: #C89265;
