--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -2,7 +2,7 @@
     @media screen and (min-width:768px){
 
         .pagina-completa{
-            overflow-x: hidden;
+            overflow: auto;
         display: grid;
         grid-template-areas:
         "header"
@@ -43,10 +43,9 @@
 
 
     /*................................................HEADER PAGINA Menu..........................................*/
-/* */
+
     .navbar-brand{
         width: 800px;
-
     }
     /*-----------------------pagina pedidos--------------------------------*/
     .pagina-pedidos{
@@ -67,7 +66,6 @@
     .redessociales{
     grid-area: redessociales;
     }
-
     .boton-animacion{
         display: flex;
         justify-content: center;
@@ -80,13 +78,11 @@
         animation-name: animacion-in;
         animation-duration:2s;
     }
-    /* */
     .video {
         @extend .boton-animacion;
         animation-name: animacion-out;
         animation-duration:5s;
     }  
-
 
         @keyframes animacion-in{
             0%{
@@ -103,12 +99,9 @@
             }
         
     }
-  
     .Churros-rosario{
         font-size: $tamanofuente +1;
     }
-
-        /* */
     .video{
         text-align: center;
     }
@@ -116,7 +109,6 @@
         max-width: 80px;
         margin-left: 5px;
     }
-
     /*---------------------------------------------main pagina menu----------------------------*/
 
     .churros-rellenos img, .churros-comunes img, .delgados img, .bañados img, .delgados-bañados img, .picachurros img{  
@@ -129,7 +121,6 @@
     font-weight: bolder;
     color:$color-gradiente;
     } 
-
     .navegacion-menu{
     display:grid;
     justify-content:space-evenly;
@@ -138,7 +129,6 @@
     "producto3 producto4"
     "producto5 producto6";
     }
-
     .producto1{
     grid-area: producto1;
 
@@ -168,7 +158,6 @@
   
 
         /*..................................................TITULOS  PAGINAS.................................*/
-        /* */
     .titulo{
         font-family: 'Kanit', sans-serif;
         color: $color-tittle;
@@ -176,8 +165,6 @@
         font-size: $tamanofuente 0.5;
     }
     
-
-
         /*.....................................................imagen1 LOGO DE LAS PAGINAS DE ENVIOS y pagos*/
     .imagen1{
         text-align: center;
