--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,7 @@ footer {
 /*-----------------------media queries................desktop- PAGINA INICIAL*/
 @media screen and (min-width: 768px) {
   .pagina-completa {
+    overflow: -x hidden;
     display: grid;
     grid-template-areas: "header" "main" "footer"; }
   footer {
